[tool.poetry]
name = "hacker_news_cli"
version = "0.1.0"
description = ""
authors = ["Nika Sakandelidze <nikasakana@gmail.com>"]
readme = "README.md"
packages = [{include = "hacker_news_cli"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
